﻿# DotnetToolbar 0.2.2 Release Notes
Release Date: 2023-10-25

## Bug Fixes
- Code cleanup
- Using ExecuteProcessAsync for every command.

# DotnetToolbar 0.1.71-0.2.1 Release Notes
Release Date: 2023-10-25

## New
- Since all major feature works seamlessly upgrade version to 0.2.1

## Bug Fixes
- fixed copy past bug started dotnet twice.

## Upcoming Features
- one method to call external executables
- project need general cleanup
- project should use Extensibility Essentials 2022
- project should use Community.VisualStudio.Toolkit
- project should use https://www.vsixcookbook.com/recipes/showing-progress.html

# DotnetToolbar 0.1.72 - 0.1.77 Release Notes
Release Date: 2023-10-22

## New Features
- NugetPush: Hide api key in commandline output.

## Enhancements
- Added some taskstatus center wait function. Needs to be investigated further.

## Bug Fixes
- Serveral attemts to get the solution guid (new project creation). Did behave differently -> Quickstart.
- minor code cleanup


# DotnetToolbar 0.1.71 Release Notes
Release Date: 2023-10-22

## New Features
- Nodereuse false in settings

## Bug Fixes
- fix for newly create projects.

# DotnetToolbar 0.1.70 Release Notes
Release Date: 2023-10-22

## New Features
- changed solution load to https://github.com/madskristensen/SolutionLoadSample


# DotnetToolbar 0.1.69 Release Notes
Release Date: 2023-10-22

## New Features
- Publish on Solution or Project option to settings
- Publish solution is default

## Bug Fixes
- Defaults on settings json changes.

# DotnetToolbar 0.1.68 Release Notes
Release Date: 2023-10-22

## New Features
- Settings Dialog first draft.
- Option general: Block execution of non sdk style projects.
- Option general: Kill all dotnet process before execute.

# DotnetToolbar 0.1.66 Release Notes
Release Date: 2023-10-21

## Bug Fixes
- dotnet publish hang on Non SDK Style projects.

# DotnetToolbar 0.1.65 Release Notes
Release Date: 2023-10-21

## Bug Fixes